syntax = "proto3";

option java_multiple_files = true;
option java_package = "fr.aleclerc.windpath.service.path.api";
option java_outer_classname = "Common";

package path.common;

message GenericResponse {
    bool success = 1;
    string message = 2;
}

message ProtoUUID {
    sfixed64 mostSigBits = 1;
    sfixed64 leastSigBits = 2;
}